examples/errors/not_semicolon.jj
func main
{
    println(1)
}